@@ -1,2 +1,4 @@
-- Added settings to each form in the checklist configuration to allow the
+- Added settings to each form in the checklist configuration to allow the checklist sequence to be blocked until the workflow is complete.
+- Added form exemptions. The admin can now mark forms as exempt by user.
+- Added settings to each form in the checklist configuration to control whether the form title is linked to the completed entry.
 - Fixed an issue with the link to the checklist list page from the breadcrumbs where the id parameter is not removed.
